--- a/dollar-docs/src/main/webapp/_posts/2014-12-10-socketio.markdown
+++ b/dollar-docs/src/main/webapp/_posts/2014-12-10-socketio.markdown
@@ -34,3 +34,5 @@ Now we have the magic, the `*=` is the subscriptive assignment operator. This is
 Finally we have the reactive part. The first thing we do is create a 'pair', a pair is a map with a single key/value entry. The key is the type of event we are going to send, the value is the actual message itself. Because we have the variable message in this expression any change to message will cause the expression to be re-evaluated causing the pair to be published using the `publish` operator to our previously defined `server`.
 
 And that my friends is it. It's obviously a very simple example, however I feel it amply illustrates the value of the reactive side of Dollar.
+
+This is a [working example](https://github.com/neilellis/dollar/blob/master/dollar-examples/src/main/resources/bulletin.ds), you'll also need the [client code](https://github.com/neilellis/dollar/blob/master/dollar-examples/src/main/webapp/index.html)
