--- a/dollar-docs/src/main/webapp/_posts/2014-12-01-release-0.1.0.markdown
+++ b/dollar-docs/src/main/webapp/_posts/2014-12-01-release-0.1.0.markdown
@@ -5,7 +5,7 @@ date:   2014-12-01 16:24:44
 categories: dollar releases
 ---
 
-The 0.1.0 experimental release of DollarScript is ready to download in [Bintray](https://bintray.com/neilellis/dollar/dollar-runtime-osx/0.1.0/view/files). This release is just to give you a taste of what Dollar is all about and to encourage hackers to feedback on language features.
+The 0.1.0 experimental release of DollarScript is ready to download [ ![Download](https://api.bintray.com/packages/neilellis/dollar/dollarscript/images/download.svg) ](https://bintray.com/neilellis/dollar/dollarscript/_latestVersion). This release is just to give you a taste of what Dollar is all about and to encourage hackers to feedback on language features.
 
 Please let me know of bugs, ideas etc. I'm @neilellis on Twitter or email hello@neilellis.me - good luck!
 
